--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ a
 }
 #HOME
 {
-  background-image: url("images\crypto.png");
+  background-image: url("images/crypto.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center top;
